<?xml version="1.0"?>
<package format="2">
  <name>rmw</name>
  <version>0.0.0</version>
  <description>Contains the ROS middleware API.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- This is required for the definition of the rosidl typesupport types -->
  <build_export_depend>rosidl_generator_c</build_export_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
